--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,19 @@ click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
 colorama==0.4.6
+contourpy==1.1.1
+cycler==0.12.1
 filelock==3.12.4
 Fiona==1.9.4.post1
+fonttools==4.43.1
 geopandas==0.14.0
 idna==3.4
 Jinja2==3.1.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+kiwisolver==1.4.5
 MarkupSafe==2.1.3
+matplotlib==3.8.0
 mpmath==1.3.0
 networkx==3.1
 numpy==1.26.0
@@ -31,6 +36,7 @@ pystac-client==0.7.5
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 rasterio==1.3.8.post1
 referencing==0.30.2
 requests==2.31.0
