--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ fonttools==4.43.1
 geopandas==0.14.0
 idna==3.4
 Jinja2==3.1.2
+joblib==1.3.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 kiwisolver==1.4.5
@@ -41,10 +42,13 @@ rasterio==1.3.8.post1
 referencing==0.30.2
 requests==2.31.0
 rpds-py==0.10.6
+scikit-learn==1.3.1
+scipy==1.11.3
 shapely==2.0.1
 six==1.16.0
 snuggs==1.4.7
 sympy==1.12
+threadpoolctl==3.2.0
 torch==2.0.0+cu118
 torchvision==0.15.1+cu118
 typing_extensions==4.8.0
