--- a/configs/resnet18.yaml
+++ b/configs/resnet18.yaml
@@ -8,7 +8,9 @@ model:
 train:
   data:
     geojson_path: ./data/raw/train.geojson
+    collections: sentinel-2-l2a
     datetime: 2022-01-01/2022-12-30
+    band: visual
     transforms:
       - name: to_tensor
         params: {}
@@ -42,7 +44,9 @@ train:
 test:
   data:
     geojson_path: ./data/raw/test.geojson
+    collections: sentinel-2-l2a
     datetime: 2022-01-01/2022-12-30
+    band: visual
     transforms:
       - name: to_tensor
         params: {}
