--- a/configs/resnet18_train.yaml
+++ b/configs/resnet18_train.yaml
@@ -1,3 +1,4 @@
+job_name: resnet18_train
 verision: 1.0.0
 seed: 18
 
@@ -12,7 +13,7 @@ train:
     collections: sentinel-2-l2a
     datetime: 2022-01-01/2022-12-30
     band: visual
-    transforms:
+    transform:
       - name: to_tensor
         params: {}
       - name: resize
@@ -48,7 +49,7 @@ test:
     collections: sentinel-2-l2a
     datetime: 2022-01-01/2022-12-30
     band: visual
-    transforms:
+    transform:
       - name: to_tensor
         params: {}
       - name: resize
