--- a/configs/resnet18_pred.yaml
+++ b/configs/resnet18_pred.yaml
@@ -1,4 +1,5 @@
 job_name: resnet18_pred
+job_type: prediction
 verision: 1.0.0
 seed: 18
 
@@ -7,7 +8,7 @@ model:
   params: 
     freeze_backbone: True
   threshold: 0.623
-  weight: results\resnet18_train_1.0.0_2023-10-15_20-28-51Z\epoch_30.pth
+  weight: results\resnet18_train_1.0.0_2023-10-17_18-05-33Z\checkpoints\epoch_30.pth
 
 data:
   geojson_path: ./data/raw/pred.geojson
