--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,6 @@ Mako==1.2.4
 Markdown==3.5
 MarkupSafe==2.1.3
 matplotlib==3.8.0
-mlflow==2.7.1
 mpmath==1.3.0
 networkx==3.1
 numpy==1.26.0
@@ -44,7 +43,10 @@ packaging==23.2
 pandas==2.1.1
 Pillow==10.0.1
 planetary-computer==1.0.0
+prometheus-client==0.17.1
+prometheus-flask-exporter==0.22.4
 protobuf==4.24.4
+psutil==5.9.6
 pyarrow==13.0.0
 pydantic==2.4.2
 pydantic_core==2.10.1
@@ -56,7 +58,6 @@ pystac-client==0.7.5
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
-pywin32==306
 PyYAML==6.0.1
 querystring-parser==1.2.4
 rasterio==1.3.8.post1
@@ -74,8 +75,8 @@ sqlparse==0.4.4
 sympy==1.12
 tabulate==0.9.0
 threadpoolctl==3.2.0
-torch==2.0.0+cu118
-torchvision==0.15.1+cu118
+torch==2.0.0 -f https://download.pytorch.org/whl/cpu
+torchvision==0.15.1 -f https://download.pytorch.org/whl/cpu
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.6
