--- a/configs/resnet18_train.yaml
+++ b/configs/resnet18_train.yaml
@@ -14,9 +14,13 @@ train:
     collections: sentinel-2-l2a
     datetime: 2022-01-01/2022-12-30
     band: visual
+    scale_factor: 1
     transform:
       - name: to_tensor
         params: {}
+      # - name: random_crop_and_scale
+      #   params: 
+      #     crop_size_ratio: [0.25, 0.25, 0.25, 0.25]
       - name: resize
         params:
           size: [224, 224]
@@ -50,6 +54,7 @@ test:
     collections: sentinel-2-l2a
     datetime: 2022-01-01/2022-12-30
     band: visual
+    scale_factor: 1
     transform:
       - name: to_tensor
         params: {}
